@@ -1,10 +1,9 @@
 #!/bin/bash
 
-# Script to run {.beat_name} in foreground with the same path settings that
+# Script to run {{.beat_name}} in foreground with the same path settings that
 # the init script / systemd unit file would do.
 
 /usr/share/{{.beat_name}}/bin/{{.beat_name}} -e \
-  -c /etc/{{.beat_name}}/{{.beat_name}}.yml \
   -path.home /usr/share/{{.beat_name}} \
   -path.config /etc/{{.beat_name}} \
   -path.data /var/lib/{{.beat_name}} \
